added input ui to create UI overlays. added 2 implementations to see gamepad/keys input the the driving inputs that get inferred from it

--- a/main.css
+++ b/main.css
@@ -15,3 +15,18 @@ body {
     bottom: 0px;
     padding: 5px;
 }
+
+svg {
+    pointer-events: none;
+    position: absolute;
+}
+
+#cu-gamepad {
+    left: 0;
+    bottom: 25px;
+}
+
+#cu-car {
+    left: 0;
+    top: 50px;
+}
